--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ cryptography==42.0.5
 defusedxml==0.7.1
 Django==3.2.1
 django-allauth==0.61.1
+django-appconf==1.0.6
+django-compressor==4.4
+django-widget-tweaks==1.5.0
 gunicorn==21.2.0
 idna==3.6
 oauthlib==3.2.2
@@ -14,9 +17,10 @@ pycparser==2.22
 PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2024.1
+rcssmin==1.1.1
 requests==2.31.0
 requests-oauthlib==2.0.0
+rjsmin==1.2.1
 sqlparse==0.4.4
 urllib3==2.2.1
 whitenoise==6.6.0
-django_widget_tweaks==1.5.0
